Display_map_in_full_screen_for_X-RAIN.user.css
/* Display map in full screen for X-RAIN */
@namespace url(http://www.w3.org/1999/xhtml);

@-moz-document url-prefix("http://www.river.go.jp/x/krd0107010.php") {
  /* Display map in full screen */
  #main { width: 100% !important; }
  #map-contents { width: auto !important; }

  #single-mp-radar, #mp-radar {
    width: auto !important;
    height: 950px !important;
  }

  #legendPanel1 {
    top: initial !important;
    left: initial !important;
    bottom: 255px !important;
    right: 80px !important;
  }
  #mapDate {
    top: initial !important;
    bottom: 4px !important;
    right: 4px !important;
    font: bold 24px/1.2 sans-serif !important;
  }

  #map-size-btn { display: none !important; }


  /* Adjust top menu position */
  header { display: flex !important; }
  header div { width: auto !important; }

  #logo { margin-right: auto !important; }

  #logo-img { vertical-align: middle !important; }
  .logo_cap { display: inline-block !important; }

  .menu { margin: 4px 0.4em 0 0 !important; }

  header > div:empty, .menu br { display: none !important; }
}

